@@ -35,8 +35,6 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <parquet.version>1.3.2</parquet.version>
-    <parquet.format.version>2.0.0</parquet.format.version>
   </properties>
 
   <repositories>
@@ -265,6 +263,7 @@
       <artifactId>commons-lang</artifactId>
       <version>2.6</version>
     </dependency>
+
     <dependency>
       <groupId>com.twitter</groupId>
       <artifactId>parquet-column</artifactId>
